--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8546,8 +8546,7 @@ a.category-slug.active {
   display: inline-block;
   position: absolute;
   padding-top: 0.25em;
-  padding-left: 0.25em;
-  border-bottom: none;
+  padding-left: 0.5em;
 }
 
 .list__links .jump-link {
