--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -51,8 +51,7 @@
         display: inline-block;
         position: absolute;
         padding-top: 0.25em;
-        padding-left: 0.25em;
-        border-bottom: none;
+        padding-left: 0.5em;
     }
 
     .list__links & {
@@ -67,9 +66,10 @@
         margin-right: 0;
 
         &_icon {
-            margin-top: -0.5em;
             top: 50%;
             right: 0;
+            padding: 0;
+            margin-top: -0.5em;
             text-align: right;
         }
     });
